--- a/package.json
+++ b/package.json
@@ -1,12 +1,14 @@
 {
-  "name": "ytmp3-scrap-api",
+  "name": "ytmp3-api",
   "version": "1.0.0",
+  "description": "Simple YouTube MP3 API using SaveTube scraper",
   "main": "index.js",
   "scripts": {
     "start": "node index.js"
   },
   "dependencies": {
     "axios": "^1.6.0",
-    "express": "^4.18.2"
+    "express": "^4.18.2",
+    "ytdl-core": "^4.11.2"
   }
 }
